next version <kevin@koconnor.net>, <pmiscml@gmail.com>

  * One can now watch the CPSR and SPSR registers via the standard
    watch methods.  For example:
      addlist resumetraces cpsr

  * The variable INITRD no longer defaults to "initrd".  In order to
    use an initrd, one must use: set initrd "xxx".  If an initrd is
    specified, it must be present or the boot will fail.  (This change
    was made because previously one could erroneously set an initrd to
    a non-existent file and haret would not complain.)

  * RAMADDR no longer defaults to 0xa0000000 on unknown hardware.
    (The devices that use that address are easy to detect, and it
    causes confusing error messages on other devices.)

  * PXA irq watching has been modified so that it conforms with other
    platforms.  This is a user visible change: to ignore interrupts
    use "IBIT IRQS x" instead of "SET II(x) 1" (x may not be the
    same).  The new output will only make sense if one is using the
    haretconsole script.

  * Improve memory detection on wince 5 (and later) devices.  It
    should no longer be necessary to set RAMSIZE for most devices.

  * New command: LOADFUNC

  * Haret now runs on wince 2.11 devices.  (Fixed issue which caused
    command dispatch to not work.)

  * == and != operators added (Example: 'if 1 == 1 print "sure"').

  * New command: MSGBOX, display message with the given title, text,
    icon and button, waits for user to click button, stores return code
    in variable RESULT.

  * New allocation method (CreateFileMapping), able to handle 20Mb+ initrd's.

  * Better handling of overlapped memory regions during allocation.

  * New command: EXIT, terminate HaRET unconditionally. (QUIT just closes
    network session.)

20070606 0.4.8 <kevin@koconnor.net>

  * New commands: ATIDBG, ADDR2MOD, PLAYSOUND, SETLCD

  * New support for tracing memory (or coprocessors) during a wince
    resume.  This can be done with something like: