@@ -94,7 +94,7 @@ $(OUT)mach-autogen.o: src/mach/machlist.txt
 
 COREOBJS := $(MACHOBJS) haret-res.o libcfunc.o \
   script.o memory.o video.o asmstuff.o lateload.o output.o cpu.o \
-  linboot.o fbwrite.o font_mini_4x6.o winvectors.o
+  linboot.o fbwrite.o font_mini_4x6.o winvectors.o exceptions.o
 
 HARETOBJS := $(COREOBJS) haret.o gpio.o uart.o wincmds.o \
   watch.o irqchain.o irq.o pxatrace.o l1trace.o arminsns.o \
